*** empty log message ***

--- a/bundles/org.eclipse.jdt.doc.user/tips/tips-11.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tips/tips-11.htm
@@ -82,6 +82,18 @@
       loaded.</td>
   </tr>
   <tr> 
+    <td width="30%" valign="top" align="right"> 
+      <div align="right"> <b>Stepping into selections</b> </div>
+    </td>
+    <td width="70%" valign="top" align="left"> 
+      <p>The Java debugger allows you to step into a single method within a series 
+        of chained or nested method calls. Simply highlight the method you wish 
+        to step into and select <b>Step into Selection</b> from the Java editor 
+        context menu.</p>
+      <p><img src="../whatsNew/images/step-into-selection.gif" width="703" height="168"></p>
+    </td>
+  </tr>
+  <tr> 
     <td width="30%" valign="top" align="right"><b>Controlling<br>
       your console</b></td>
     <td width="70%" valign="top" align="left">Output displayed in the console 
