--- a/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-80_ant.htm
+++ b/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-80_ant.htm
@@ -17,9 +17,10 @@
 
 
 <P CLASS="Para">This chapter is split into three main sections. First, we cover 
-  the basics of working with Ant scripts in Eclipse. Next, we work through several 
-  Eclipse use cases in which Ant scripts can make life a little easier. Finally, 
-  we consider the entire External Tools framework and how to use non-Ant tools.</P>
+  the basics of working with Ant buildfiles in Eclipse. Next, we work through 
+  several Eclipse use cases in which Ant buildfiles can make life a little easier. 
+  Finally, we consider the entire External Tools framework and how to use non-Ant 
+  tools.</P>
 
 
 <UL CLASS="UnorderedList">
