--- a/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-81_basics.htm
+++ b/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-81_basics.htm
@@ -10,9 +10,9 @@
 <BODY BGCOLOR="#ffffff">
 <h2>Eclipse Ant basics</h2>
   
-<P CLASS="Para">This section covers the basics of working with Ant scripts in 
-  Eclipse. Creating, editing, configuring and reusing Ant scripts will all be 
-  discussed in this section.</P>
+<P CLASS="Para">This section covers the basics of working with Ant buildfiles 
+  in Eclipse. Creating, editing, configuring and reusing Ant buildfiles will all 
+  be discussed in this section.</P>
 
 
 <P><br>
