--- a/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-82_create.htm
+++ b/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-82_create.htm
@@ -4,24 +4,23 @@
 <META HTTP-EQUIV="Content-Style-Type" CONTENT="text/css">
 
 <LINK REL="STYLESHEET" HREF="../book.css" CHARSET="ISO-8859-1" TYPE="text/css">
-<title>Creating Ant scripts</title>
+<title>Creating Ant buildfiles</title>
 
 </HEAD>
 <BODY BGCOLOR="#ffffff">
-<h3>Creating Ant scripts</h3>
+<h3>Creating Ant buildfiles</h3>
   
-<P CLASS="Para"> Ant scripts are just text files, so the most straightforward 
-  way to create an Ant script in Eclipse is:</P>
+<P CLASS="Para"> Ant buildfiles are just text files, so the most straightforward 
+  way to create an Ant buildfile in Eclipse is:</P>
 <ol>
   <li>File&gt;New&gt;File.</li>
   <li>Enter any name for the file, but make sure it has a .xml extension.</li>
   <li>Click Finish.</li>
 </ol>
 <p>As long as the file has a .xml extension, Eclipse will consider it to be a 
-  possible Ant script, and will enable Ant-related actions when it is selected.</p>
-<p>As we will see in a later section, you can create an Ant build script for an 
-  Eclipse plugin that contains predefined targets related useful for deploying 
-  the plugin.</p>
+  possible Ant buildfile, and will enable Ant-related actions when it is selected.</p>
+<p>As we will see in a later section, you can create an Ant buildfile for an Eclipse 
+  plugin that contains predefined targets related useful for deploying the plugin.</p>
 
 
 <P>
