--- a/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-84_run_ant.htm
+++ b/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-84_run_ant.htm
@@ -4,30 +4,30 @@
 <META HTTP-EQUIV="Content-Style-Type" CONTENT="text/css">
 
 <LINK REL="STYLESHEET" HREF="../book.css" CHARSET="ISO-8859-1" TYPE="text/css">
-<title>Running Ant scripts</title>
+<title>Running Ant buildfiles</title>
 
 </HEAD>
 <BODY BGCOLOR="#ffffff">
-<h3>Running Ant scripts</h3>
+<h3>Running Ant buildfiles</h3>
   
-<P CLASS="Para">Any file with a .xml extension can be run as an Ant script. Of 
-  course, not all such files really are Ant scripts, but no harm is done if you 
-  mistakenly attempt to run a non-Ant .xml file as an Ant script.</P>
+<P CLASS="Para">Any file with a .xml extension can be run as an Ant buildfile. Of 
+  course, not all such files really are Ant buildfiles, but no harm is done if you 
+  mistakenly attempt to run a non-Ant .xml file as an Ant buildfile.</P>
 <P CLASS="Para">In this section, we will cover the basic mechanisms for running 
-  Ant scripts in Eclipse, using the HelloWorld.xml file created in the last section.</P>
+  Ant buildfiles in Eclipse, using the HelloWorld.xml file created in the last section.</P>
 <ol>
   <li>Select HelloWorld.xml in the Navigator and choose 'Run Ant...' from its 
     context menu.</li>
   <li>The Run Ant dialog appears.<img src="../images/Image603_run_dialog.gif" alt="" border="0" width="474" height="631"><br>
   </li>
-  <li>This dialog allows you to configure many aspects of the way your Ant script 
+  <li>This dialog allows you to configure many aspects of the way your Ant buildfile 
     is run, but for now we will concentrate on the Targets tab which allows you 
     to select the Ant targets to run and their order. Select both targets and 
     leave the order as the default. </li>
   <li>Click Run.</li>
-  <li>The Ant script is run, and the output is sent to the Console view.</li>
+  <li>The Ant buildfile is run, and the output is sent to the Console view.</li>
 </ol>
-<p>But what if you sometimes want to run the script so the Hello target executed 
+<p>But what if you sometimes want to run the buildfile so the Hello target executed 
   first, and other times so the World target was first? Would you have to bring 
   up the dialog each time and change the ordering? Fortunately, as we'll see in 
   the next section, the answer is no.</p>
