--- a/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-86_use_cases.htm
+++ b/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-86_use_cases.htm
@@ -10,21 +10,14 @@
 <BODY BGCOLOR="#ffffff">
 <h2>Use cases for Ant in Eclipse</h2>
   
-<P CLASS="Para">Now that we've seen how to work with Ant scripts in Eclipse, let's 
-  look at two ways that Ant scripts can be useful in Eclipse.</P>
+<P CLASS="Para">Now that we've seen how to work with Ant buildfiles in Eclipse, 
+  let's look at two ways that Ant buildfiles can be useful in Eclipse.</P>
 <ul>
   <li>Deploying Eclipse plugins</li>
   <li>Building projects</li>
 </ul>
-<p>We'll start by using an Ant script to handle various aspects of deploying Eclipse 
-  plug-ins.</p>
-<p>&nbsp;</p>
-
-
-<P><a href="qs-87_plugin_deploy.htm"><img border="0" src="../images/ngnext.gif" alt="Next topic" width="49" height="12"> 
-  Deploying Eclipse plug-ins</a></P>
-<p><a href="qs-85a_ant_view.htm"> <img border="0" src="../images/ngback.gif" alt="Back to previous topic" width="49" height="12"> 
-  Using the Ant view</a></p>
+<p>We'll start by using an Ant buildfile to handle various aspects of deploying 
+  Eclipse plug-ins.</p>
 <p></p>
 <P><br>
   <a href="../hglegal2003.htm"> <img src="../images/ngibmcpy2003.gif" alt="Copyright IBM Corporation 2000, 2003. All Rights Reserved." border="0" width="324" height="14"></a> 
