--- a/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-87_plugin_deploy.htm
+++ b/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-87_plugin_deploy.htm
@@ -13,8 +13,8 @@
 <P CLASS="Para">The first use of Ant within Eclipse discussed here will be as 
   a plug-in deployment tool. When developing Eclipse plug-ins, it's frequently 
   handy to build the jar files for your plug-in and test them as part of an Eclipse 
-  install. The Ant script we'll look at in the next section will do this and much 
-  more.</P>
+  install. The Ant buildfile we'll look at in the next section will do this and 
+  much more.</P>
 
 
 <P><br>
