--- a/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-89_generate_buildxml.htm
+++ b/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-89_generate_buildxml.htm
@@ -21,7 +21,7 @@
     files named 'build.xml' with the Ant editor. <br>
     <img src="../images/Image607_buildxml.gif" alt="" border="0" width="634" height="525"></li>
 </ol>
-<p>The build.xml file is a default Ant script with many targets useful for deploying 
+<p>The build.xml file is a default Ant buildfile with many targets useful for deploying 
   your plugin. For example, there are individual targets to build all necessary 
   jars for your plugin, create a .zip file containing everything in your plugin, 
   cleanup any .zip files that may have been created and so on. </p>
