--- a/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-91_build_options.htm
+++ b/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-91_build_options.htm
@@ -10,10 +10,10 @@
 <BODY BGCOLOR="#ffffff">
 <h4>More plug-in deployment options</h4>
   
-<P CLASS="Para">Now that we've run the default target for our build.xml script, 
+<P CLASS="Para">Now that we've run the default target for our build.xml buildfile, 
   it's time to explore some more options. </P>
 <P CLASS="Para">As can be seen in the Outline view, the default build.xml Ant 
-  script has a number of targets.<br>
+  buildfile has a number of targets.<br>
   <img src="../images/Image608_buildxml_outline.gif" alt="" border="0" width="217" height="405"> 
 </P>
 <P CLASS="Para">Solid green arrows denote targets, while subtargets are represented 
@@ -26,19 +26,19 @@
   <li><b>build.jars</b> This is the default target we ran in the last section. 
     It defers to the HelloWorldPlugin.jar target to do its work.</li>
   <li><b>clean</b> This target deletes all zips, jars and temporary directories 
-    that may have been created by other targets in this script.</li>
+    that may have been created by other targets in this buildfile.</li>
   <li><b>zip.plugin</b> This target builds executable and source jars, then zips 
     everything into a single archive.</li>
 </ul>
-<p>Remember that this build.xml file is simply the <i>default</i> deployment script 
+<p>Remember that this build.xml file is simply the <i>default</i> deployment buildfile 
   for an Eclipse plug-in. There will be times when you will want/have to modify 
-  this script to handle your particular projects. For example, if you have a directory 
+  this buildfile to handle your particular projects. For example, if you have a directory 
   that contains resources necessary for your plug-in, you will want to update 
   the build.xml file to include this directory in the jars and zips it creates.</p>
-<p>This completes our look at using Ant scripts to deploy Eclipse plugins. The 
-  key points to remember are that you can easily create a default deployment script 
+<p>This completes our look at using Ant buildfiles to deploy Eclipse plugins. The 
+  key points to remember are that you can easily create a default deployment buildfile 
   for a plug-in that contains many useful targets, and that while this default 
-  script is useful, you may have to modify it to suit your needs.</p>
+  buildfile is useful, you may have to modify it to suit your needs.</p>
 
 
 <P><br>
