--- a/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-92_project_builders.htm
+++ b/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-92_project_builders.htm
@@ -4,15 +4,15 @@
 <META HTTP-EQUIV="Content-Style-Type" CONTENT="text/css">
 
 <LINK REL="STYLESHEET" HREF="../book.css" CHARSET="ISO-8859-1" TYPE="text/css">
-<title>Ant scripts as project builders</title>
+<title>Ant buildfiles as project builders</title>
 
 </HEAD>
 <BODY BGCOLOR="#ffffff">
-<h3>Ant scripts as project builders</h3>
+<h3>Ant buildfiles as project builders</h3>
   
-<P CLASS="Para">Our second practical example of using Ant scripts in Eclipse is 
-  a 'project builder'. This is an Ant script that has been designated to run whenever 
-  a project is built. The uses for such a script are many:</P>
+<P CLASS="Para">Our second practical example of using Ant buildfiles in Eclipse 
+  is a 'project builder'. This is an Ant buildfile that has been designated to 
+  run whenever a project is built. The uses for such a buildfile are many:</P>
 <ul>
   <li>Generate a .jar file containing class files from your project</li>
   <li>Perform some type of pre or post build processing on source or binary files 
@@ -24,9 +24,9 @@
   </li>
   <li>Copy class files to some location (for instance, on a network)</li>
 </ul>
-<p>For this example, we will create an Ant script that creates a .jar archive 
+<p>For this example, we will create an Ant buildfile that creates a .jar archive 
   of the class files in a project. Note that this is similar to the example in 
-  the last chapter, in which we used an Ant script to generate .jar files for 
+  the last chapter, in which we used an Ant buildfile to generate .jar files for 
   an Eclipse plug-in. This example differs in that it works for any Eclipse project, 
   whether or not it is also an Eclipse plug-in. </p>
 
