--- a/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-93_project_builder.htm
+++ b/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-93_project_builder.htm
@@ -4,13 +4,13 @@
 <META HTTP-EQUIV="Content-Style-Type" CONTENT="text/css">
 
 <LINK REL="STYLESHEET" HREF="../book.css" CHARSET="ISO-8859-1" TYPE="text/css">
-<title>Creating a project builder Ant script</title>
+<title>Creating a project builder Ant buildfile</title>
 
 </HEAD>
 <BODY BGCOLOR="#ffffff">
-<h4>Creating a project builder Ant script</h4>
+<h4>Creating a project builder Ant buildfile</h4>
 <P CLASS="Para">To see how project builders work, we will create a simple project 
-  with a single source file and an Ant script that jars up the single class file. 
+  with a single source file and an Ant buildfile that jars up the single class file. 
   Though this example uses Java, it should be noted that project builders are 
   available for all projects, Java or otherwise.</P>
 <ol>
@@ -32,7 +32,7 @@
     and click OK. </li>
   <li>The External Tools dialog appears.Set the name to 'Makejar'. In the Main 
     tab, use the first 'Browse Workspace...' button to set the Location to be 
-    the projectBuilder.xml script created above. Then use the second 'Browse Workspace...' 
+    the projectBuilder.xml buildfile created above. Then use the second 'Browse Workspace...' 
     button to set the Base Directory to be the HW project.<br>
     <img src="../images/Image611_et_main_tab.gif" alt="" border="0" width="470" height="576"> </li>
   <li>In the Refresh tab, we want to be sure that when our HelloWorld.jar is created, 
@@ -40,7 +40,7 @@
     finishes running, so check 'Refresh resource after running tool', then select 
     ${project} in the list of scope variables. Because refreshing can be expensive, 
     you should in general refresh the smallest entity that contains all resources 
-    that will be affected by your script. <br>
+    that will be affected by your buildfile. <br>
     <img src="../images/Image612_et_refresh_tab.gif" alt="" border="0" width="422" height="485"> 
   </li>
   <li>In the Targets tab, the default target should be selected.</li>
@@ -53,7 +53,7 @@
   <li>Apply the changes and click OK.</li>
   <li>Back in the project properties dialog, you will now see a project builder 
     named 'Makejar' that is set to run after the default Java Builder. Note that 
-    you can change the order so that your Ant script runs before the Java builder, 
+    you can change the order so that your Ant buildfile runs before the Java builder, 
     though that wouldn't make sense in this example. Click OK to save the project 
     builder and close the dialog.<br>
     <img src="../images/Image613_project_properties.gif" alt="" border="0" width="548" height="415"> 
