--- a/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-95_external_tools.htm
+++ b/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-95_external_tools.htm
@@ -15,7 +15,7 @@
   that Eclipse's external tools framework handles two broad classes of external 
   tools:</P>
 <ul>
-  <li>Ant scripts</li>
+  <li>Ant buildfiles</li>
   <li>Everything else</li>
 </ul>
 <P CLASS="Para"> In this section, we look at ways to set up and use non-Ant external 
