--- a/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-96_non_ant_pjs.htm
+++ b/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-96_non_ant_pjs.htm
@@ -11,7 +11,7 @@
 <h3>Non-Ant project builders</h3>
   
 <P CLASS="Para"> When we worked through our project builder example, you may have 
-  noticed that when we created our project builder Ant script, we had a choice 
+  noticed that when we created our project builder Ant buildfile, we had a choice 
   of external tool type:<br>
   <img src="../images/Image614_et_type_dialog.gif" alt="" border="0" width="326" height="220"> </P>
 <P CLASS="Para">The 'Program' option is essentially a catch-all, allowing you 
@@ -36,7 +36,7 @@
     on your system. </li>
   <li>The Refresh and Build Options tabs are identical to the tabs we saw for 
     Ant project builders. In particular, the Build Options tab allows us to control 
-    what types of builds trigger our project builder script.</li>
+    what types of builds trigger our project builder buildfile.</li>
   <li>Apply the changes, and click OK.</li>
   <li>As with Ant project builders, we can control the ordering of this project 
     builder with respect to other project builders (such as the default Java Builder 
