--- a/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-97_standalone_ets.htm
+++ b/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-97_standalone_ets.htm
@@ -31,10 +31,10 @@
   <li>In the Select Variable dialog, you will see a number of variables you can 
     pass as arguments to the program specified in Location. Select '${resource_loc}' 
     and click OK. </li>
-  <li>When this script is run, the absolute path of the resource selected in the 
+  <li>When this buildfile is run, the absolute path of the resource selected in the 
     workbench will be passed to the jar utility in the position specified. </li>
   <li>Click Run.</li>
-  <li>Notice that the script sends the jar utility output to the Console view.</li>
+  <li>Notice that the buildfile sends the jar utility output to the Console view.</li>
   <li>Select a different .jar file in your workspace.</li>
   <li>Click the External Tools button in the toolbar. Notice the contents of this 
     jar are sent to the Console view as well. Now you have a quick and easy way 
