--- a/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-83_edit.htm
+++ b/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-83_edit.htm
@@ -4,18 +4,18 @@
 <META HTTP-EQUIV="Content-Style-Type" CONTENT="text/css">
 
 <LINK REL="STYLESHEET" HREF="../book.css" CHARSET="ISO-8859-1" TYPE="text/css">
-<title>Editing Ant scripts</title>
+<title>Editing Ant buildfiles</title>
 
 </HEAD>
 <BODY BGCOLOR="#ffffff">
-<h3>Editing Ant scripts</h3>
-<P CLASS="Para">Because Ant scripts are simple text files, you can use any text 
+<h3>Editing Ant buildfiles</h3>
+<P CLASS="Para">Because Ant buildfiles are simple text files, you can use any text 
   editor to edit them. But there are several advantages to using the Eclipse Ant 
   editor, including syntax coloring, content assist and an outline view. To get 
-  familiar with the Eclipse Ant editor, we will create a simple Ant script using 
+  familiar with the Eclipse Ant editor, we will create a simple Ant buildfile using 
   this editor.</P>
 <ol>
-  <li>Create an Ant script called HelloWorld.xml (see the previous page if necessary).</li>
+  <li>Create an Ant buildfile called HelloWorld.xml (see the previous page if necessary).</li>
   <li>Open the Ant editor on the file by selecting Open With&gt;Ant Editor from 
     the file's context menu. Note that the default editor for a .xml file is a 
     simple text editor, but this can be changed in the Window&gt;Preferences&gt;Workbench&gt;File 
