--- a/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-85a_ant_view.htm
+++ b/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-85a_ant_view.htm
@@ -11,26 +11,26 @@
 <h3>Using the Ant view</h3>
   
 <P CLASS="Para">Eclipse provides a standard view, the Ant view, that lets you 
-  work with your Ant scripts. This view is tree-structured, showing Ant scripts 
+  work with your Ant buildfiles. This view is tree-structured, showing Ant buildfiles 
   as top-level entries and targets &amp; subtargets as children. The main advantage 
-  of this view is that you can work with all of your Ant scripts in one place, 
+  of this view is that you can work with all of your Ant buildfiles in one place, 
   as opposed to hunting them down in the Navigator.</P>
 <ol>
   <li>Open the Ant view from the workbench menu by selecting Window&gt;Show View&gt;Other...&gt;Ant&gt;Ant.</li>
-  <li>By default, the Ant view is empty. There are 2 ways to add Ant scripts to 
+  <li>By default, the Ant view is empty. There are 2 ways to add Ant buildfiles to 
     this view: 
     <ul>
       <li>Click the 'Add Build File' button. This brings up a dialog in which 
-        you explicitly select those Ant scripts you want to add</li>
+        you explicitly select those Ant buildfiles you want to add</li>
       <li>Click the 'Add Build Files with Search' button. This brings up a search 
-        dialog in which you can specify a filename pattern for your Ant scripts 
+        dialog in which you can specify a filename pattern for your Ant buildfiles 
         and search within the entire workspace or a specified working set</li>
     </ul>
   </li>
-  <li>Once added to the Ant view, Ant script entries remain in the view across 
+  <li>Once added to the Ant view, Ant buildfile entries remain in the view across 
     workbench invocations until explicitly removed.</li>
   <li>Click the Add Build Files with Search button. Suppose you only remember 
-    that the script you want to work with starts with 'H'. Enter 'H*.xml' for 
+    that the buildfile you want to work with starts with 'H'. Enter 'H*.xml' for 
     the build file name. Make sure Workspace is selected for the scope, then click 
     Search. The HelloWorld.xml file is found and placed in the Ant view.</li>
   <li>Expand the top-level entry to see the default target Hello, and the subtarget 
@@ -40,17 +40,17 @@
     World subtarget gets executed. </li>
   <li>Select the top-level HelloWorld build file and click Play. Notice that just 
     the default target, Hello, gets executed.</li>
-  <li>To edit your script, bring up the context menu on the HelloWorld file and 
+  <li>To edit your buildfile, bring up the context menu on the HelloWorld file and 
     select Open With&gt;Ant Editor.</li>
   <li>To edit the default launch configuration, select Properties... from the 
     context menu.</li>
-  <li>The Run Ant dialog appears. Here you can modify the way in which the script 
+  <li>The Run Ant dialog appears. Here you can modify the way in which the buildfile 
     is run from the Ant view. Note that the choice and order of targets is ignored 
     when running from the Ant view. If the top-level file is selected, just the 
     default target is run and if one of the targets or subtargets is selected, 
     just that target is run. It is not possible to run multiple targets from the 
     Ant view.</li>
-  <li>Select the HelloWorld file, then click the Remove button. The script is 
+  <li>Select the HelloWorld file, then click the Remove button. The buildfile is 
     removed from the view. Note that this does not delete the file from the workspace.</li>
 </ol>
 <p>&nbsp;</p>
