--- a/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-90_build_jar.htm
+++ b/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-90_build_jar.htm
@@ -10,7 +10,7 @@
 <BODY BGCOLOR="#ffffff">
 <h4>Building a .jar file for the plug-in</h4>
   
-<P CLASS="Para">Now we are ready to use the build.xml Ant script that was created 
+<P CLASS="Para">Now we are ready to use the build.xml Ant buildfile that was created 
   in the last sectrion:</P>
 <ol>
   <li>Select the build.xml file in the Navigator and choose 'Run Ant...' from 
@@ -18,22 +18,22 @@
   <li>In the Run Ant dialog, the Targets tab should be visible. Make sure that 
     'build.jars' is the only item in the list selected.</li>
   <li>Switch to the Refresh tab. The options on this tab control if and how the 
-    workspace looks for new, changed and deleted resources after the script finishes 
+    workspace looks for new, changed and deleted resources after the buildfile finishes 
     execution. Because refreshing can be an expensive operation, you should refresh 
-    the smallest subset of the workspace necessary for your script.</li>
+    the smallest subset of the workspace necessary for your buildfile.</li>
   <li>Check 'Refresh resources after running tool', then select '${project}' in 
     the list.<br>
     <img src="../images/Image606_refresh_tab.gif" alt="" border="0" width="474" height="498"> 
   </li>
   <li>Click Run.</li>
-  <li>The Ant script runs, executing the build.jars target. Output from the script 
+  <li>The Ant buildfile runs, executing the build.jars target. Output from the buildfile 
     is visible in the Console view.</li>
-  <li>When the script finishes, notice that there is a new .jar file under your 
+  <li>When the buildfile finishes, notice that there is a new .jar file under your 
     project containing the two class files that comprise your plug-in. If we had 
     chosen not to refresh the project, the .jar file would still have been created, 
     but we would not see it in the Navigator.</li>
 </ol>
-<p>We've run the default target for the build.xml Ant script, but there are many 
+<p>We've run the default target for the build.xml Ant buildfile, but there are many 
   other targets and options to be explored.</p>
 
 
