--- a/bundles/org.eclipse.platform.doc.user/concepts/concepts-13.htm
+++ b/bundles/org.eclipse.platform.doc.user/concepts/concepts-13.htm
@@ -55,6 +55,11 @@ from being created in some projects.
 <a href="../tasks/tasks-49.htm">Viewing resource properties</a><br>
 </p>
 
+<p><img border="0" src="../images/ngrelr.gif" alt="Related references" width="159" height="27">
+<br>
+  <a href="../reference/ref-14b.htm">Linked resources</a> 
+</p>
+
 <p>&nbsp;<br>
 <a href="../hglegal2003.htm"><img src = "../images/ngibmcpy2003.gif" alt="Copyright IBM Corporation and others 2000, 2003" border="0" width="324" height="14"></a>
 </p>
