--- a/bundles/org.eclipse.platform.doc.user/tasks/tasks-45.htm
+++ b/bundles/org.eclipse.platform.doc.user/tasks/tasks-45.htm
@@ -68,6 +68,11 @@ above:
 <a href="tasks-43.htm">Creating a folder</a><br>
 </P>
 
+<p><img border="0" src="../images/ngrelr.gif" alt="Related references" width="159" height="27">
+<br>
+  <a href="../reference/ref-14b.htm">Linked resources</a> 
+</p>
+
 <P>&nbsp;<br>
 <a href="../hglegal2003.htm"><img src="../images/ngibmcpy2003.gif" alt="Copyright IBM Corporation and others 2000, 2003" border="0" width="324" height="14"></a>
 </P>
