--- a/bundles/org.eclipse.platform.doc.user/tasks/tasks-cvs-11.htm
+++ b/bundles/org.eclipse.platform.doc.user/tasks/tasks-cvs-11.htm
@@ -86,7 +86,8 @@ from the drop down list that becomes available.
 </p>
 
 <p><img border="0" src="../images/ngrelr.gif" alt="Related reference" width="159" height="27"><br>
-<a href="../reference/ref-47.htm">CVS</a>
+<a href="../reference/ref-47.htm">CVS</a><br>
+<a href="../reference/ref-20-fileContent.htm">File Content</a>
 </p>
 
 <p>&nbsp;<br>
