Fixed CHKPII errors

--- a/bundles/org.eclipse.platform.doc.user/tips/platform_tips.html
+++ b/bundles/org.eclipse.platform.doc.user/tips/platform_tips.html
@@ -306,8 +306,8 @@ and Tricks.]</p>
   <tr>
     <td width="30%" valign="top" align="right"><b>Special end character for resource name patterns</b></td>
     <td width="70%" valign="top" align="left">The <b>Open Resource</b> and <b>Go To &gt; Resource</b> dialogs support the 
-    end character '<'.  For example, if you want to see all resources that exactly match &quot;Test&quot;, use the end
-	character.  If the pattern does not end in '<', a '*' will be appended to the pattern. 
+    end character '&lt;'.  For example, if you want to see all resources that exactly match &quot;Test&quot;, use the end
+	character.  If the pattern does not end in '&lt;', a '*' will be appended to the pattern. 
 	Entering &quot;Test&quot; will show all resources starting with &quot;Test&quot;.</td>
   </tr>
   <tr>
@@ -388,7 +388,7 @@ and Tricks.]</p>
   <tr>
     <td width="30%" valign="top" align="right"><b>Quickly find a resource</b></td>
     <td width="70%" valign="top" align="left">Use the <b>Navigate &gt; Go To &gt; Resource</b> action to quickly find 
-    a resource.  If the <b>Go To &gt Resource</b> action does not appear in your perspective, you can 
+    a resource.  If the <b>Go To &gt; Resource</b> action does not appear in your perspective, you can 
     add the action by selecting the <b>Window &gt; Customize Perspective &gt; Other &gt; Resource Navigation</b> action set.</td>
   </tr>
   <tr>
@@ -405,7 +405,7 @@ and Tricks.]</p>
   </tr>
   <tr>
     <td width="30%" valign="top" align="right"><b>Quick navigation amongst views, editors and perspectives</b></td>
-    <td width="70%" valign="top" align="left">The <b>Window &gt Keyboard Shortcuts</b> menu includes a number of 
+    <td width="70%" valign="top" align="left">The <b>Window &gt; Keyboard Shortcuts</b> menu includes a number of 
     accelerators for quickly navigating amongst the various views, editors, perspectives and menus in the workbench.  
     These short cuts include <b>Ctrl-F8</b> for switching amongst perspectives, <b>Ctrl-F7</b> for switching amongst views, 
     <b>Ctrl-F6</b> for switching amongst editors and <b>F12</b> for activating an editor.
@@ -439,7 +439,7 @@ and Tricks.]</p>
   </tr>
   <tr>
     <td width="30%" valign="top" align="right"><b>Activating an action set</b></td>
-    <td width="70%" valign="top" align="left">Use the <b>Window &gt Customize Perspective &gt Other</b> 
+    <td width="70%" valign="top" align="left">Use the <b>Window &gt; Customize Perspective &gt; Other</b> 
     option to activate action sets for a Perspective.  The action set items will appear on 
     the Perspective's menus and toolbar.
     <p><img border="0" src="images/perspective-other.gif"></p></td>
@@ -447,7 +447,7 @@ and Tricks.]</p>
   <tr>
     <td width="30%" valign="top" align="right"><b>Pinning editors</b></td>
     <td width="70%" valign="top" align="left">When the <b>Close Editors Automatically</b> preference 
-    (found on the <b>Windows &gt Preferences &gt Workbench &gt Editors</b> preference page) is active, you can use the 
+    (found on the <b>Windows &gt; Preferences &gt; Workbench &gt; Editors</b> preference page) is active, you can use the 
     <b>Pin Editor</b> toolitem to stop an editor from being closed.
 	The <b>Pin Editor</b> toolitem appears on the workbench toolbar.
     <p><img border="0" src="images/pin-editor.gif"></p></td>
@@ -459,19 +459,19 @@ and Tricks.]</p>
   </tr>
   <tr>
     <td width="30%" valign="top" align="right"><b>Opening editors with a single click</b></td>
-    <td width="70%" valign="top" align="left">Use the <b>Window &gt Preferences &gt Workbench &gt Open Mode</b>
+    <td width="70%" valign="top" align="left">Use the <b>Window &gt; Preferences &gt; Workbench &gt; Open Mode</b>
     preference to activate single click opening
 	for editors.  In single click mode, a single click on a resource will select it and immediately open an 
 	editor on it. </td>
   </tr>
   <tr>
     <td width="30%" valign="top" align="right"><b>Restoring a perspective's layout</b></td>
-    <td width="70%" valign="top" align="left">Use <b>Window &gt Reset Perspective</b> to restore the layout 
+    <td width="70%" valign="top" align="left">Use <b>Window &gt; Reset Perspective</b> to restore the layout 
     of a perspective to its original layout. </td>
   </tr>
   <tr>
     <td width="30%" valign="top" align="right"><b>Workspace project management</b></td>
-    <td width="70%" valign="top" align="left">Use the <b>Project &gt Close Project</b> action to 
+    <td width="70%" valign="top" align="left">Use the <b>Project &gt; Close Project</b> action to 
     manage projects within your workspace.  When a project is closed, its resources no 
     longer appear in the Workbench, but they do still reside on the local file system. 
     Closed projects require less memory. Also, since they are not examined during builds, 
