Fixed CHKPII errors

--- a/bundles/org.eclipse.platform.doc.user/whatsNew/swt_whatsnew.html
+++ b/bundles/org.eclipse.platform.doc.user/whatsNew/swt_whatsnew.html
@@ -66,9 +66,9 @@
         coordinates to display-relative coordinates and vice versa.</p>
       <p><strong><code>Font(Device, FontData[]):</code></strong> Creates a font from an array of
         <code>FontData</code> objects.  This is important since any application that wishes to run properly
-        on SWT/motif in DBCS languages should treat a <code>Font</code>’s collection of <code>FontData</code>
+        on SWT/motif in DBCS languages should treat a <code>Font</code>'s collection of <code>FontData</code>
         objects as inseparable.</p>
-      <p><strong><code>StyledText.setSelectionForeground/Background(Color):</code></strong> Sets the editor’s selection
+      <p><strong><code>StyledText.setSelectionForeground/Background(Color):</code></strong> Sets the editor's selection
         colors.  There are also new methods for getting these color values.</p>
       <p align="center"><img border="0" src="images/swt-selectionColor.gif" alt="StyledText with custom selection colors" width="245" height="49"></p>
     </td>
